SERVER-5588 mapReduce and eval not recognized by mongos